src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Complaints</fullName>
        <description>Process to manage complaints</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Logged</fullName>
        </values>
        <values>
            <fullName>More Information Required</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Implementation Issues</fullName>
        <description>Support Process for Issues raised during the implementation process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Review - User</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Logged</fullName>
        </values>
        <values>
            <fullName>More Information Required</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Shelved</fullName>
        </values>
        <values>
            <fullName>User Testing</fullName>
        </values>
        <values>
            <fullName>Work in Progress - IT</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Action_Required_By__c</fullName>
        <label>Action Required By</label>
        <picklist>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020 Developers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Developers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_of_System__c</fullName>
        <description>Stores system object(s) case releates to</description>
        <label>Area of System</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Allocations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payable Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Francis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rachel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FinancialForce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Murray-Jones</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Case__c</fullName>
        <description>The fires workflow to automatically close case on the date specifed</description>
        <inlineHelpText>Enter the date on which you would like to the system to automatically close this case</inlineHelpText>
        <label>Auto Close Case</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BSC_Hours__c</fullName>
        <label>BSC Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Process__c</fullName>
        <description>Details the business process the case is related to</description>
        <inlineHelpText>Enter the business process the case is related to</inlineHelpText>
        <label>Business Process</label>
        <picklist>
            <picklistValues>
                <fullName>Finance - Cash Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Credit Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Income Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Statement Emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Statement Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics - Event Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics - Trainer Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Starter / Leaver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Event Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Lead management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Opportunity Life-cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Transfers and Cancellations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Transactions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_review_due__c</fullName>
        <description>Please review your case by this date</description>
        <inlineHelpText>Please review your case by this date</inlineHelpText>
        <label>Case review due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Comment__c</fullName>
        <inlineHelpText>Enter the date the last comment was entered</inlineHelpText>
        <label>Date of Last Comment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dept__c</fullName>
        <description>Stores dept of user raising case</description>
        <label>Dept</label>
        <picklist>
            <picklistValues>
                <fullName>Comms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logisitics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainers / Auditors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Don_t_close_me__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this case is still relevant tick this box</inlineHelpText>
        <label>Don&apos;t close me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Renamed from Due Date because of a backlog of cases.</description>
        <label>Case Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick if a duplicate case</description>
        <inlineHelpText>Tick if a duplicate case</inlineHelpText>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Example__c</fullName>
        <label>Example</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hours_Actual_Total_2020__c</fullName>
        <label>Hours (Actual) - Total 2020</label>
        <summarizedField>Case_Resource__c.Hours_Actual__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Resource__c.Company__c</field>
            <operation>equals</operation>
            <value>2020 Management</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Resource__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Actual_Total_BSC__c</fullName>
        <label>Hours (Actual) - Total BSC</label>
        <summarizedField>Case_Resource__c.Hours_Actual__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Resource__c.Company__c</field>
            <operation>equals</operation>
            <value>BSC</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Resource__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Planned_Total_2020__c</fullName>
        <label>Hours (Planned) - Total 2020</label>
        <summarizedField>Case_Resource__c.Hours_Planned__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Resource__c.Company__c</field>
            <operation>equals</operation>
            <value>2020 Management</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Resource__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Planned_Total_BSC__c</fullName>
        <label>Hours (Planned) - Total BSC</label>
        <summarizedField>Case_Resource__c.Hours_Planned__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Resource__c.Company__c</field>
            <operation>equals</operation>
            <value>BSC</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Resource__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jira_Issue__c</fullName>
        <description>link to the Jira issue that is related to this case</description>
        <inlineHelpText>add the url link to the jira issue that is related to this case.</inlineHelpText>
        <label>Jira Issue</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Flag__c</fullName>
        <formula>IMAGE(CASE( Priority, &quot;Low&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Medium&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;High&quot;, &quot;/img/samples/light_red.gif&quot;,&quot;/img/samples/light_red.gif&quot;),&quot;Current Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a sample formula field that displays a traffic light based on the case&apos;s priority.</inlineHelpText>
        <label>Priority Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go-Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Go-Live</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Raised_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Raised By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Finance_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temp field used to track cases which are hampered or caused by the lack of a finance review</description>
        <label>Requires Finance Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_cause__c</fullName>
        <description>Details the root cause as defined on closing the case</description>
        <inlineHelpText>Enter the root cause as defined on closing the case</inlineHelpText>
        <label>Root cause</label>
        <picklist>
            <picklistValues>
                <fullName>Change request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known System Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Starter / Leaver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rule(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Force Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow(s)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Area__c</fullName>
        <label>SFDC Area</label>
        <picklist>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object and Field Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permissions and Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products and Pricebooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting and Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriptions E-Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriptions Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriptions Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriptions SUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Stabilisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Templates and Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training / Guidance Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Problem</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflows and Validation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Area__c</fullName>
        <label>Salesforce Area</label>
        <picklist>
            <picklistValues>
                <fullName>Additional picklist items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex/API development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appexchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration (Workflow rules, Validation rules, New Fields etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect for Outlook/Lotus Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service &amp; Support Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How do I?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Functionality Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup and Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Success_Criteria__c</fullName>
        <label>Success Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Optimisation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick if part of the System Optimisation project</description>
        <inlineHelpText>Tick if part of the System Optimisation project</inlineHelpText>
        <label>System Optimisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Hrs__c</fullName>
        <formula>Time_Spent__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <description>Captures time spent working on case</description>
        <inlineHelpText>Enter time spent working on this case in hours</inlineHelpText>
        <label>Time Spent (Mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_remaining__c</fullName>
        <description>Captures estimated time remaining on this case</description>
        <inlineHelpText>Enter estimated time remaining to complete this case in hourse</inlineHelpText>
        <label>Time Remaining (Mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trained_user_in_this_area__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If we have trained the user on this type of issue this box will be ticked.  We can then report upoin this to establish training needs</description>
        <inlineHelpText>If you trained the user whilst resolving this issue tick this box</inlineHelpText>
        <label>Trained user in this area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Forms Auto-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Autoresponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Forms Autoresponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2020_Developer_Hours__c</fullName>
        <label>2020 Developer Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2020_Hours__c</fullName>
        <label>2020 Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Assigned_To__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Raised_By__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Date_of_Last_Comment__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>System_Optimisation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>notEqual</operation>
            <value>Will Murray-Jones</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Shelved</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Rachel_s_Cases_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Raised_By__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>System_Optimisation__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Date_of_Last_Comment__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Jira_Issue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Rachel</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Shelved</value>
        </filters>
        <label>Rachel&apos;s Cases Open</label>
    </listViews>
    <listViews>
        <fullName>Awaiting_Review_IT</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Awaiting Review - IT</value>
        </filters>
        <label>Awaiting Review  IT</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_created_Yesterday</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Assigned_To__c</columns>
        <columns>Raised_By__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Time_Spent__c</columns>
        <columns>CASES.REASON</columns>
        <columns>SFDC_Area__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Created Yesterday</label>
        <sharedTo>
            <group>InternalCaseManagers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_created_today</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Assigned_To__c</columns>
        <columns>Raised_By__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>SFDC_Area__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Time_Spent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created today</label>
        <sharedTo>
            <group>InternalCaseManagers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Rasied_Today</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Assigned_To__c</columns>
        <columns>Raised_By__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Cases Raised Today</label>
    </listViews>
</CustomObject>